--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div style="background-color:yellow">
+		<h1 id="f1" style="text-align:center">Flowers photos</h1>
+		<p style="text-align:center">A flower, sometimes known as a bloom or blossom, is the reproductive structure found in flowering plants (plants of the division Angiospermae). Flowers produce gametophytes, which in flowering plants consist of a few haploid cells which produce gametes.</p>
+	</div>
+		<div style="background-color:yellow">
+		<h1 id="f2" style="text-align:center">Roses picture</h1>
+		<p style="text-align:center">A flower, sometimes known as a bloom or blossom, is the reproductive structure found in flowering plants (plants of the division Angiospermae). Flowers produce gametophytes, which in flowering plants consist of a few haploid cells which produce gametes.</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
